--- a/src/styles/Extra.css
+++ b/src/styles/Extra.css
@@ -20,10 +20,10 @@
   margin-bottom: 20px;
 }
 
-.home-button {
+.not-found-container .home-button {
   display: inline-block;
   padding: 12px 24px;
-  background-color: #8b5e3b; /* Coffee color */
+  background-color: #8b5e3b;
   color: white;
   text-decoration: none;
   font-size: 16px;
@@ -31,6 +31,6 @@
   transition: background 0.3s ease;
 }
 
-.home-button:hover {
+.not-found-container .home-button:hover {
   background-color: #6a4226;
 }
