--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -92,7 +92,7 @@
   border: none;
   border-radius: 20px;
   cursor: pointer;
-  transition: background 0.3s ease-in-out;
+  transition: all 0.3s ease;
 }
 
 .contact-page-form button:hover {
