--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -85,6 +85,12 @@
   background: var(--background-color);
 }
 
+.menu-link {
+  width: 100%;
+  text-decoration: none;
+  color: inherit;
+}
+
 .menu h2 {
   font-size: 40px;
   margin-bottom: 20px;
@@ -111,6 +117,15 @@
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+}
+
+.menu-item:hover {
+  transform: translateY(-10px);
 }
 
 .menu-item img {
@@ -134,8 +149,6 @@
 .menu-btn {
   position: absolute;
   bottom: -25px;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .price {
@@ -193,6 +206,11 @@
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
+  transition: all 0.3s ease;
+}
+
+.feature-item:hover {
+  transform: translateY(-10px);
 }
 
 .feature-item img {
@@ -237,6 +255,11 @@
 
 .banner img {
   width: 300px;
+  transition: all 0.3s ease;
+}
+
+.banner img:hover {
+  transform: translateY(-5px);
 }
 
 .banner-text {
@@ -343,7 +366,6 @@
   border: none;
   border-radius: 20px;
   cursor: pointer;
-  transition: background 0.3s ease-in-out;
 }
 
 .contact-form button:hover {
