restyle auth page

--- a/client/src/styles/admin.css
+++ b/client/src/styles/admin.css
@@ -1,6 +1,8 @@
-.welcome-admin{
-    display: flex;
-    justify-content: center;
+.welcome-admin {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .form-title {
